name:                onionhoo
version:             0.1.0.0
synopsis:            A library for fetching data on nodes in the Tor network.
description:         Please see README.md
homepage:            http://github.com/baumanno/onionhoo#readme
license:             BSD3
license-file:        LICENSE
author:              Oliver Baumann
maintainer:          oliver.baumann@mailbox.org
copyright:           2016 Oliver Baumann
category:            network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Onionhoo.Bandwidth
                     , Onionhoo.Bandwidth.Relay
                     , Onionhoo.Bandwidth.Bridge
                     , Onionhoo.Clients
                     , Onionhoo.Clients.Bridge
                     , Onionhoo.Detail
                     , Onionhoo.Detail.Relay
                     , Onionhoo.Detail.Bridge
                     , Onionhoo.History.Graph
                     , Onionhoo.Summary
                     , Onionhoo.Summary.Relay
                     , Onionhoo.Summary.Bridge
                     , Onionhoo.Uptime
                     , Onionhoo.Uptime.Relay
                     , Onionhoo.Uptime.Bridge
                     , Onionhoo.Weights
                     , Onionhoo.Weights.Relay
                     , Onionhoo.Query
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-conduit
                     , text
  default-language:    Haskell2010

test-suite onionhoo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , onionhoo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/baumanno/onionhoo
